added new model and events

--- a/TutorialMod/src/main/resources/assets/soufmod/lang/en_us.json
+++ b/TutorialMod/src/main/resources/assets/soufmod/lang/en_us.json
@@ -2,5 +2,6 @@
 	"item.soufmod.example_item": "Example Item",
 	"block.soufmod.example_block": "Example Block",
 	"block.soufmod.rotatable_block": "Rotatable Block",
+	"block.soufmod.souf_block":"Souf Block",
 	"itemGroup.soufmod": "souf mod"
 }
